# tareas_LVL

./: .env  .gitignore  LoginView.py  README.md  TareasController.py  TareasModel.py  UserController.py  UserModel.py  Users.py  dashbooard.py  databaseModel.py  inicio_se.py  main.py  pyproject.toml  schemasModel.py  tareas.sql  usuario.sql
src/: main.py
src/controllers/: TareaController.py  TareasController.py  UserController.py
src/database/: registro.sql  tareas.sql  usuario.sql
src/moddels/views/: LoginView.py
src/models/: TareasModel.py  UserModel.py  Users.py  UsersModel.py  databaseModel.py  schemasModel.py
src/views/: LoginView.py  RegisterView.py  RegistroView.py  UserView.py  dashboard.py  dashboardView.py  dashbooard.py  inicio_se.py
